--- a/examples/agent-kit-langgraph/.env.example
+++ b/examples/agent-kit-langgraph/.env.example
@@ -2,3 +2,7 @@ OPENAI_API_KEY=
 RPC_URL=
 SOLANA_PRIVATE_KEY=
 TAVILY_API_KEY=       #Optional: for search functionality
+OPENAI_API_KEY=
+RPC_URL=
+SOLANA_PRIVATE_KEY=
+TAVILY_API_KEY= 
